# spyrun

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  rust-toolchain.toml  rustfmt.toml  spyrun.toml  test.toml
.github/workflows/: publish.yml
example/cmd/all/poll/system/cmd/: getinfo.cmd
example/ps1/all/poll/system/: getinfo.ps1
example/ps1/host/poll/user/: caffeine.ps1
src/: command.rs  logger.rs  main.rs  message.rs  settings.rs  spy.rs  util.rs
