[package]
name = "spyrun"
version = "1.0.3"
edition = "2021"
authors = ["yukimemi <yukimemi@gmail.com>"]
description = "File watcher and command executor"
repository = "https://github.com/yukimemi/spyrun"
license = "MIT"

[dependencies]
aead = "0.5.2"
aes-gcm-siv = "0.11.1"
anyhow = "1.0.88"
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive", "env", "cargo", "unicode"] }
crypto-hash = "0.3.4"
go-defer = "0.1.0"
log = "0.4.22"
log-derive = "0.4.1"
normalize-path = "0.2.1"
normpath = "1.3.0"
notify = "6.1.1"
path-slash = "0.2.1"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
single-instance = "0.3.3"
tera = "1.20.0"
time = { version = "0.3.36", features = ["macros", "local-offset"] }
toml = "0.8.19"
tracing = { version = "0.1.40", features = [
  "log",
  "attributes",
  "std",
  "tracing-attributes",
] }
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
  "time",
  "json",
  "local-time",
  "env-filter",
] }
walkdir = "2.5.0"
