# =============================================================================
# File        : Cargo.toml
# Author      : yukimemi
# Last Change : 2025/04/27 20:09:33.
# =============================================================================

[package]
name = "spyrun"
version = "2.1.1"
edition = "2024"
authors = ["yukimemi <yukimemi@gmail.com>"]
description = "File watcher and command executor"
repository = "https://github.com/yukimemi/spyrun"
license = "MIT"

[dependencies]
aead = "0.5.2"
aes-gcm-siv = "0.11.1"
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive", "env", "cargo", "unicode"] }
crypto-hash = "0.3.4"
go-defer = "0.1.0"
log = "0.4.27"
log-derive = "0.4.1"
normalize-path = "0.2.1"
normpath = "1.3.0"
notify = "8.0.0"
path-slash = "0.2.1"
rand = "0.9.1"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
single-instance = "0.3.3"
tera = "1.20.0"
time = { version = "0.3.41", features = ["macros", "local-offset"] }
toml = "0.8.21"
tracing = { version = "0.1.41", features = [
  "log",
  "attributes",
  "std",
  "tracing-attributes",
] }
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [
  "chrono",
  "time",
  "json",
  "local-time",
  "env-filter",
] }
walkdir = "2.5.0"
